# interpolacionNewton

./: CMakeLists.txt  Newton.c  Newton.h  allocptr.c  allocptr.h  div_dif_table.c  div_dif_table.h  input_data  interpolGSL  interpolGSL.c  interpolGSL.h  interpolNewton  main.c  printing.c  printing.h  read_data.c  read_data.h  tests.c  tests.h
